# ahriman

./: .bandit-test.yml  .bandit.yml  .dockerignore  .gitignore  .pylint.toml  .pylintrc  .pytest.ini  .readthedocs.yaml  .readthedocs.yml  AUTHORS  CHANGELOG.md  CONFIGURING.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  make_release.sh  pyproject.toml  setup.cfg  setup.py  subpackages.py  tox.ini  tox.toml  toxfile.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-security-report.md  04-discussion.md  bug_report.md  feature-request.md  feature_request.md
.github/workflows/: docker-image.yml  docker.yml  python-app.yml  regress.yml  release.yml  run-setup.yml  run-tests.yml  setup.sh  setup.yml  tests.sh  tests.yml
docker/: Dockerfile  entrypoint-web.sh  entrypoint.sh  install-aur-package.sh  systemd-nspawn.sh
docs/: advanced-usage.rst  ahriman.1  ahriman.application.application.rst  ahriman.application.application.workers.rst  ahriman.application.handlers.rst  ahriman.application.rst  ahriman.core.alpm.remote.rst  ahriman.core.alpm.rst  ahriman.core.archive.rst  ahriman.core.auth.rst  ahriman.core.build_tools.rst  ahriman.core.configuration.rst  ahriman.core.database.data.rst  ahriman.core.database.migrations.rst  ahriman.core.database.operations.rst  ahriman.core.database.rst  ahriman.core.distributed.rst  ahriman.core.formatters.rst  ahriman.core.gitremote.rst  ahriman.core.housekeeping.rst  ahriman.core.http.rst  ahriman.core.log.rst  ahriman.core.report.rst  ahriman.core.repository.rst  ahriman.core.rst  ahriman.core.sign.rst  ahriman.core.status.rst  ahriman.core.support.pkgbuild.rst  ahriman.core.support.rst  ahriman.core.triggers.rst  ahriman.core.upload.rst  ahriman.models.rst  ahriman.rst  ahriman.web.apispec.rst  ahriman.web.middlewares.rst  ahriman.web.rst  ahriman.web.schemas.rst  ahriman.web.views.api.rst  ahriman.web.views.rst  ahriman.web.views.service.rst  (+28 more)
docs/_static/: architecture.dot
docs/advanced-usage/: handlers.rst  index.rst  views.rst
docs/faq/: backup.rst  distributed.rst  docker.rst  examples.rst  general.rst  index.rst  maintenance-packages.rst  misc.rst  non-x86_64-setup.rst  reporting.rst  synchronization.rst  web.rst
docs/migrations/: 2.12.0.rst  2.16.0.rst  2.9.0.rst  index.rst
docs/source/: ahriman.application.application.rst  ahriman.application.handlers.rst  ahriman.application.rst  ahriman.core.alpm.remote.rst  ahriman.core.alpm.rst  ahriman.core.auth.rst  ahriman.core.build_tools.rst  ahriman.core.database.data.rst  ahriman.core.database.migrations.rst  ahriman.core.database.operations.rst  ahriman.core.database.rst  ahriman.core.formatters.rst  ahriman.core.report.rst  ahriman.core.repository.rst  ahriman.core.rst  ahriman.core.sign.rst  ahriman.core.status.rst  ahriman.core.upload.rst  ahriman.models.rst  ahriman.rst  ahriman.web.middlewares.rst  ahriman.web.rst  ahriman.web.views.rst  ahriman.web.views.service.rst  ahriman.web.views.status.rst  ahriman.web.views.user.rst  conf.py  index.rst
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  chartSetup.ts  main.tsx  utils.ts
package/archlinux/: PKGBUILD  ahriman.install  ahriman.sudoers  ahriman.sysusers  ahriman.tmpfiles
package/etc/: ahriman.ini
pylint_plugins/: definition_order.py  import_order.py
recipes/: README.md
recipes/check/: README.md  compose.yml  service.ini
recipes/daemon/: README.md  compose.yml
recipes/distributed/: README.md  compose.yml  service.ini  worker.ini
recipes/distributed-manual/: README.md  compose.yml  service.ini  worker.ini
recipes/i686/: Dockerfile  README.md  compose.yml  makepkg.conf  pacman.conf  service.ini
recipes/index/: README.md  compose.yml  service.ini
recipes/multirepo/: README.md  compose.yml
recipes/oauth/: README.md  compose.yml  nginx.conf  service.ini
recipes/pam/: README.md  compose.yml  service.ini
recipes/pull/: README.md  compose.yml  service.ini
recipes/sign/: README.md  compose.yml  nginx.conf  repository-sign.gpg  service.ini
recipes/web/: README.md  compose.yml
src/ahriman/: __init__.py  version.py
tests/ahriman/: conftest.py  test_tests.py  (+1 more)
(+989 files in other folders)
